YouTube Video Now WOrks.

--- a/2013-10-09-BandFanSite/tours.html
+++ b/2013-10-09-BandFanSite/tours.html
@@ -11,12 +11,12 @@
   <center><h1 style="color: white;">The Black Keys</h1></center>
   <center><img src="images/theblackkeys.jpg" width="800"></center>
   <center><nav>
-  <ul style="text-decoration: none;">
-    <li><a href="index.html" style="color: white;">Home</a></li>
-    <li><a href="tours.html" style="color: white;">Tours</a></li>
-    <li><a href="gallery.html" style="color: white;">Gallery</a></li>
-    <li><a href="discography.html" style="color: white;">Discography</a></li>
-    <li><a href="http://store.theblackkeys.com/" style="color: white;">Store</a></li>
+  <ul style="list-style: none; color: white;">
+    <li><a href="index.html">Home</a></li>
+    <li><a href="tours.html">Tours</a></li>
+    <li><a href="gallery.html">Gallery</a></li>
+    <li><a href="discography.html">Discography</a></li>
+    <li><a href="http://store.theblackkeys.com/">Store</a></li>
   </ul>
   </nav></center>
 </header>
@@ -31,7 +31,7 @@ The Depot - SOLD OUT</p>
 <section>
 
 </section>
-<footer style="color: white;">
+<footer style="color: white;  margin-top: 50px;">
 <small>(c) 2013 A&R Music Fans.  All rights reserved.</small>
 </footer>
 </body>
