--- a/2013-10-09-BandFanSite/gallery.html
+++ b/2013-10-09-BandFanSite/gallery.html
@@ -11,7 +11,7 @@
   <center><h1 style="color: white;">The Black Keys</h1></center>
   <center><img src="images/theblackkeys.jpg" width="800"></center>
   <center><nav>
-  <ul style="text-decoration: none;" style="color: white;">
+  <ul style="color: white; list-style: none;">
     <li><a href="index.html">Home</a></li>
     <li><a href="tours.html">Tours</a></li>
     <li><a href="gallery.html">Gallery</a></li>
@@ -34,7 +34,7 @@
   </table>
 </section></center>
 
-<footer style="color: white;">
+<footer style="color: white; margin-top: 50px;">
 <small>(c) 2013 A&R Music Fans.  All rights reserved.</small>
 </footer>
 </body>
