--- a/2013-10-09-BandFanSite/index.html
+++ b/2013-10-09-BandFanSite/index.html
@@ -11,7 +11,7 @@
   <center><h1 style="color: white;">The Black Keys</h1></center>
   <center><img src="images/theblackkeys.jpg" width="800"></center>
   <center><nav>
-  <ul style="text-decoration: none;" style="color: white;">
+  <ul style="list-style: none; color: white;">
     <li><a href="index.html">Home</a></li>
     <li><a href="tours.html">Tours</a></li>
     <li><a href="gallery.html">Gallery</a></li>
@@ -22,12 +22,12 @@
 </header>
 <center><section style="color: white;">
   <h2>Featured Fan Video</h2>
-  <iframe width="640" height="360" src="//www.youtube.com/embed/6k8es2BNloE" frameborder="0" allowfullscreen></iframe>
+  <iframe width="640" height="360" src="http://www.youtube.com/embed/6k8es2BNloE" frameborder="0" allowfullscreen></iframe>
 </section></center>
 <section>
 
 </section>
-<footer style="color: white;">
+<footer style="color: white; margin-top: 50px;">
 <small>(c) 2013 A&R Music Fans.  All rights reserved.</small>
 </footer>
 </body>
