changes to functions

--- a/2013-10-10-Stock-Market/index.html
+++ b/2013-10-10-Stock-Market/index.html
@@ -28,10 +28,22 @@
     </div>
   </div>
   <div class='row'>
-    <div class='small-5 columns'>
-      <p id='create_funds'></p>
+    <div class='small-3 columns'>
+      <h4 class='subheader'>Current Balance:</h4>
     </div>
-    <div class='small-7 columns'></div>
+    <div class='small-3 columns'>
+      <input id='balance' placeholder='$0.00' readonly type='text'>
+    </div>
+    <div class='small-6 columns'></div>
+  </div>
+  <div class='row'>
+    <div class='small-3 columns'>
+      <h4 class='subheader'>Total:</h4>
+    </div>
+    <div class='small-3 columns'>
+      <input id='total' readonly type='text'>
+    </div>
+    <div class='small-6 columns'></div>
   </div>
   <div class='row'>
     <div class='small-3 column'>
@@ -49,7 +61,7 @@
   </div>
   <div class='row'>
     <div class='small-2 columns'>
-      <h4 class='subheader'>Total</h4>
+      <h4 class='subheader'>Total:</h4>
     </div>
     <div class='small-3 columns'>
       <input id='grand_total' readonly type='text'>
