--- a/2013-10-10-Stock-Market/index.html
+++ b/2013-10-10-Stock-Market/index.html
@@ -38,7 +38,7 @@
   </div>
   <div class='row'>
     <div class='small-3 columns'>
-      <h4 class='subheader'>Total:</h4>
+      <h4 class='subheader'>Total Stock Price:</h4>
     </div>
     <div class='small-3 columns'>
       <input id='total' readonly type='text'>
@@ -62,10 +62,11 @@
   <div class='row'>
     <div class='small-12 columns'>
       <table id='stock_list'>
-        <tr>
+        <tr id='home'>
           <th>Symbol</th>
           <th>Name</th>
-          <th>Quote</th>
+          <th>Purchased Quote</th>
+          <th>Current Quote</th>
           <th>Purchased</th>
           <th>Total</th>
         </tr>
