--- a/2013-10-11-2013-10-11-Stock-Graph/index.html
+++ b/2013-10-11-2013-10-11-Stock-Graph/index.html
@@ -34,6 +34,15 @@
     </div>
   </div>
   <div class='row'>
+    <div class='small-2 columns'>
+      <h3 class='subheader'>Balance</h3>
+    </div>
+    <div class='small-3 columns'>
+      <input id='balance' placeholder='$0.00' readonly type='text'>
+    </div>
+    <div class='small-7 columns'></div>
+  </div>
+  <div class='row'>
     <div class='small-12 columns' id='container'></div>
   </div>
   <script src='js/vendor/jquery-1.10.2.js'></script>
