new customer feature added

--- a/2013-10-22-Shopping-Firebase-TDD/public/index.html
+++ b/2013-10-22-Shopping-Firebase-TDD/public/index.html
@@ -69,6 +69,28 @@
       <span class='hidden' id='next'>Next --></span>
     </div>
   </div>
+  <div class='row'>
+    <h3 class='subheader'>Add Customer</h3>
+  </div>
+  <div class='row'>
+    <div class='small-2 columns'>
+      <input id='domestic' name='address' type='radio' value='domestic'>Domestic</input>
+    </div>
+    <div class='small-2 columns'>
+      <input id='international' name='address' type='radio' value='international'>International</input>
+    </div>
+    <div class='small-3 columns'>
+      <label for='product-image'>Customer Image:</label>
+      <input id='customer-image' placeholder='image.png' type='text'>
+    </div>
+    <div class='small-3 columns'>
+      <label for='customer-name'>Customer Name:</label>
+      <input id='customer-name' placeholder='Bob Jenkins' type='text'>
+    </div>
+    <div class='small-2 columns'>
+      <input class='button radius expand' id='add-customer' type='button' value='Add Customer'>
+    </div>
+  </div>
   <script src='/js/vendor/jquery-1.10.2.js'></script>
   <script src='/js/vendor/foundation.min.js'></script>
   <script src='/js/vendor/underscore.js'></script>
